# PC-manager-325

./: .env.example  README.md  pyproject.toml
agent/: config.py  main.py  server.py
agent/domain/: machine_info.py
agent/handlers/: __init__.py  ping.py  scripts.py  system.py  tunnel.py
agent/services/: command_runner.py  power_service.py  ssh_tunnel_service.py
client/: app.py  config.py  main.py  ui — ярлык.lnk
client/api/: __init__.py  agent_client.py
client/db/: __init__.py  repository.py
client/models/: machine.py  profile.py  script_template.py
client/ui/: __init__.py  main_window.py
client/ui/dashboard/: __init__.py  dashboard_widget.py  machines_table.py
client/ui/machines/: __init__.py  machine_dialog.py  profile_dialog.py  profiles_manager_dialog.py
client/ui/orchestration/: __init__.py  task_form.py  task_results_widget.py
client/ui/remote_desktop/: __init__.py  novnc_widget.py
client/ui/settings/: __init__.py  client_settings_dialog.py
client/workers/: __init__.py  agent_worker.py  ssh_worker.py
infra/configs/: agent.example.yaml  client.example.yaml
infra/scripts/: start_agent_windows.ps1  start_remote_stack.sh  start_vnc_stack.sh  start_windows_vnc.ps1  stop_remote_stack.sh  stop_vnc_stack.sh
infra/systemd/: pc-agent.service
shared/: __init__.py
shared/protocol/: __init__.py  codec.py  enums.py  errors.py  models.py
shared/security/: __init__.py  auth.py  keys.py  signatures.py
shared/utils/: net.py
tests/: test_agent_handlers.py  test_machine_repository.py  test_protocol.py  test_terminal.py
(+4 files in other folders)
