[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-remote-admin"
version = "0.1.0"
description = "LAN remote administration system with Python agent and Qt client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyQt6>=6.7",
  "PyQt6-WebEngine>=6.7",
  "paramiko>=3.4",
  "pyte>=0.8.2",
  "PyYAML>=6.0.1",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent*", "client*", "shared*"]
